--- a/model2/A_Model2_kai.ipynb
+++ b/model2/A_Model2_kai.ipynb
@@ -220,27 +220,23 @@
       "__________________________________________________________________________________________________\n",
       "dropout_1 (Dropout)             (None, 50, 50)       0           Embedding[0][0]                  \n",
       "__________________________________________________________________________________________________\n",
-      "Input_ids (InputLayer)          (None, 1)            0                                            \n",
-      "__________________________________________________________________________________________________\n",
       "LSTM (LSTM)                     (None, 32)           10624       dropout_1[0][0]                  \n",
-      "__________________________________________________________________________________________________\n",
-      "dence1 (Dense)                  (None, 1)            2           Input_ids[0][0]                  \n",
       "__________________________________________________________________________________________________\n",
       "dropout_2 (Dropout)             (None, 32)           0           LSTM[0][0]                       \n",
       "__________________________________________________________________________________________________\n",
-      "dropout_3 (Dropout)             (None, 1)            0           dence1[0][0]                     \n",
+      "Input_ids (InputLayer)          (None, 1)            0                                            \n",
       "__________________________________________________________________________________________________\n",
       "merge1 (Concatenate)            (None, 33)           0           dropout_2[0][0]                  \n",
-      "                                                                 dropout_3[0][0]                  \n",
+      "                                                                 Input_ids[0][0]                  \n",
       "__________________________________________________________________________________________________\n",
-      "dence (Dense)                   (None, 16)           544         merge1[0][0]                     \n",
+      "dence (Dense)                   (None, 32)           1088        merge1[0][0]                     \n",
       "__________________________________________________________________________________________________\n",
-      "dropout_4 (Dropout)             (None, 16)           0           dence[0][0]                      \n",
+      "dropout_3 (Dropout)             (None, 32)           0           dence[0][0]                      \n",
       "__________________________________________________________________________________________________\n",
-      "output (Dense)                  (None, 2)            34          dropout_4[0][0]                  \n",
+      "output (Dense)                  (None, 2)            66          dropout_3[0][0]                  \n",
       "==================================================================================================\n",
-      "Total params: 1,011,204\n",
-      "Trainable params: 1,011,204\n",
+      "Total params: 1,011,778\n",
+      "Trainable params: 1,011,778\n",
       "Non-trainable params: 0\n",
       "__________________________________________________________________________________________________\n"
      ]
@@ -255,17 +251,15 @@
     "d_em = Dropout(0.5)(em)\n",
     "lstm_out = LSTM(32, kernel_initializer=weight_variable, name='LSTM')(d_em)\n",
     "d_lstm_out = Dropout(0.5)(lstm_out)\n",
-    "#2つ目のデータ学習\n",
-    "i2 = Dense(16, activation='elu',  name = 'dence1')(i_input)\n",
-    "d_i2 = Dropout(0.5)(i2)\n",
-    "x = concatenate([d_lstm_out, d_i2], name='merge1')\n",
+    "#2つ目のデータと統合\n",
+    "x = concatenate([d_lstm_out, i_input], name='merge1')\n",
     "\n",
-    "m2 = Dense(16, activation='elu', name = 'dence')(x)\n",
+    "m2 = Dense(32, activation='elu', name = 'dence')(x)\n",
     "d_m2 = Dropout(0.5)(m2)\n",
     "#m2 = BatchNormalization()(m2)\n",
     "output = Dense(2, activation='softmax', name = 'output')(d_m2)\n",
     "\n",
-    "optimizer = Adam(lr=1e-4)\n",
+    "optimizer = Adam(lr=1e-3)\n",
     "model = Model(inputs=[p_input, i_input], outputs = output)\n",
     "model.compile(optimizer=optimizer, loss='categorical_crossentropy',  metrics=['acc', macro_precision, macro_recall, macro_f_measure])\n",
     "model.summary()\n",
@@ -286,50 +280,20 @@
      "text": [
       "Train on 14000 samples, validate on 1999 samples\n",
       "Epoch 1/100\n",
-      "14000/14000 [==============================] - 7s 485us/step - loss: 3.0669 - acc: 0.5029 - macro_precision: 0.5030 - macro_recall: 0.5028 - macro_f_measure: 0.5029 - val_loss: 5.6986 - val_acc: 0.5073 - val_macro_precision: 0.5080 - val_macro_recall: 0.5020 - val_macro_f_measure: 0.5044\n",
+      "14000/14000 [==============================] - 7s 479us/step - loss: 2.1634 - acc: 0.5046 - macro_precision: 0.5051 - macro_recall: 0.5053 - macro_f_measure: 0.5052 - val_loss: 0.6829 - val_acc: 0.5768 - val_macro_precision: 0.5768 - val_macro_recall: 0.5761 - val_macro_f_measure: 0.5764\n",
       "Epoch 2/100\n",
-      "14000/14000 [==============================] - 5s 380us/step - loss: 3.0408 - acc: 0.4995 - macro_precision: 0.4991 - macro_recall: 0.4994 - macro_f_measure: 0.4993 - val_loss: 5.5594 - val_acc: 0.5128 - val_macro_precision: 0.5196 - val_macro_recall: 0.5079 - val_macro_f_measure: 0.5136\n",
+      "14000/14000 [==============================] - 5s 382us/step - loss: 1.1638 - acc: 0.5837 - macro_precision: 0.5848 - macro_recall: 0.5832 - macro_f_measure: 0.5840 - val_loss: 0.5612 - val_acc: 0.7204 - val_macro_precision: 0.7202 - val_macro_recall: 0.7201 - val_macro_f_measure: 0.7202\n",
       "Epoch 3/100\n",
-      "14000/14000 [==============================] - 5s 390us/step - loss: 2.9157 - acc: 0.5041 - macro_precision: 0.5042 - macro_recall: 0.5040 - macro_f_measure: 0.5041 - val_loss: 5.3039 - val_acc: 0.5063 - val_macro_precision: 0.5055 - val_macro_recall: 0.5016 - val_macro_f_measure: 0.5035\n",
+      "14000/14000 [==============================] - 5s 387us/step - loss: 0.7077 - acc: 0.7043 - macro_precision: 0.7063 - macro_recall: 0.7051 - macro_f_measure: 0.7057 - val_loss: 0.5733 - val_acc: 0.7434 - val_macro_precision: 0.7436 - val_macro_recall: 0.7430 - val_macro_f_measure: 0.7433\n",
       "Epoch 4/100\n",
-      "14000/14000 [==============================] - 6s 456us/step - loss: 2.9900 - acc: 0.5011 - macro_precision: 0.5015 - macro_recall: 0.5014 - macro_f_measure: 0.5014 - val_loss: 4.8149 - val_acc: 0.5083 - val_macro_precision: 0.5095 - val_macro_recall: 0.5038 - val_macro_f_measure: 0.5065\n",
+      "14000/14000 [==============================] - 6s 409us/step - loss: 0.5493 - acc: 0.7648 - macro_precision: 0.7665 - macro_recall: 0.7646 - macro_f_measure: 0.7655 - val_loss: 0.5746 - val_acc: 0.7299 - val_macro_precision: 0.7296 - val_macro_recall: 0.7296 - val_macro_f_measure: 0.7296\n",
       "Epoch 5/100\n",
-      "14000/14000 [==============================] - 5s 380us/step - loss: 2.8828 - acc: 0.5188 - macro_precision: 0.5187 - macro_recall: 0.5186 - macro_f_measure: 0.5187 - val_loss: 4.1401 - val_acc: 0.5148 - val_macro_precision: 0.5198 - val_macro_recall: 0.5105 - val_macro_f_measure: 0.5150\n",
+      "14000/14000 [==============================] - 5s 377us/step - loss: 0.4508 - acc: 0.8106 - macro_precision: 0.8128 - macro_recall: 0.8099 - macro_f_measure: 0.8113 - val_loss: 0.5890 - val_acc: 0.7254 - val_macro_precision: 0.7259 - val_macro_recall: 0.7254 - val_macro_f_measure: 0.7257\n",
       "Epoch 6/100\n",
-      "14000/14000 [==============================] - 5s 381us/step - loss: 2.7101 - acc: 0.5557 - macro_precision: 0.5562 - macro_recall: 0.5559 - macro_f_measure: 0.5561 - val_loss: 3.3659 - val_acc: 0.5383 - val_macro_precision: 0.5624 - val_macro_recall: 0.5339 - val_macro_f_measure: 0.5477\n",
+      "14000/14000 [==============================] - 5s 377us/step - loss: 0.3908 - acc: 0.8404 - macro_precision: 0.8420 - macro_recall: 0.8406 - macro_f_measure: 0.8413 - val_loss: 0.6106 - val_acc: 0.7289 - val_macro_precision: 0.7291 - val_macro_recall: 0.7292 - val_macro_f_measure: 0.7291\n",
       "Epoch 7/100\n",
-      "14000/14000 [==============================] - 5s 384us/step - loss: 2.6344 - acc: 0.5910 - macro_precision: 0.5926 - macro_recall: 0.5904 - macro_f_measure: 0.5915 - val_loss: 3.0603 - val_acc: 0.5548 - val_macro_precision: 0.5996 - val_macro_recall: 0.5502 - val_macro_f_measure: 0.5738\n",
-      "Epoch 8/100\n",
-      "14000/14000 [==============================] - 6s 400us/step - loss: 2.5829 - acc: 0.6020 - macro_precision: 0.6057 - macro_recall: 0.6022 - macro_f_measure: 0.6039 - val_loss: 2.5303 - val_acc: 0.5758 - val_macro_precision: 0.6365 - val_macro_recall: 0.5712 - val_macro_f_measure: 0.6020\n",
-      "Epoch 9/100\n",
-      "14000/14000 [==============================] - 6s 444us/step - loss: 2.4053 - acc: 0.6128 - macro_precision: 0.6149 - macro_recall: 0.6131 - macro_f_measure: 0.6140 - val_loss: 1.6146 - val_acc: 0.6123 - val_macro_precision: 0.6410 - val_macro_recall: 0.6092 - val_macro_f_measure: 0.6247\n",
-      "Epoch 10/100\n",
-      "14000/14000 [==============================] - 6s 419us/step - loss: 2.2971 - acc: 0.6296 - macro_precision: 0.6311 - macro_recall: 0.6300 - macro_f_measure: 0.6305 - val_loss: 1.3948 - val_acc: 0.6443 - val_macro_precision: 0.6822 - val_macro_recall: 0.6415 - val_macro_f_measure: 0.6612\n",
-      "Epoch 11/100\n",
-      "14000/14000 [==============================] - 8s 545us/step - loss: 2.1246 - acc: 0.6526 - macro_precision: 0.6559 - macro_recall: 0.6524 - macro_f_measure: 0.6541 - val_loss: 0.9821 - val_acc: 0.6878 - val_macro_precision: 0.6956 - val_macro_recall: 0.6864 - val_macro_f_measure: 0.6909\n",
-      "Epoch 12/100\n",
-      "14000/14000 [==============================] - 8s 558us/step - loss: 2.0381 - acc: 0.6590 - macro_precision: 0.6593 - macro_recall: 0.6583 - macro_f_measure: 0.6588 - val_loss: 0.8967 - val_acc: 0.7064 - val_macro_precision: 0.7066 - val_macro_recall: 0.7053 - val_macro_f_measure: 0.7059\n",
-      "Epoch 13/100\n",
-      "14000/14000 [==============================] - 9s 639us/step - loss: 1.9465 - acc: 0.6699 - macro_precision: 0.6707 - macro_recall: 0.6695 - macro_f_measure: 0.6701 - val_loss: 0.8393 - val_acc: 0.7139 - val_macro_precision: 0.7166 - val_macro_recall: 0.7126 - val_macro_f_measure: 0.7146\n",
-      "Epoch 14/100\n",
-      "14000/14000 [==============================] - 6s 405us/step - loss: 1.8462 - acc: 0.6781 - macro_precision: 0.6786 - macro_recall: 0.6775 - macro_f_measure: 0.6780 - val_loss: 0.8106 - val_acc: 0.7129 - val_macro_precision: 0.7224 - val_macro_recall: 0.7111 - val_macro_f_measure: 0.7167\n",
-      "Epoch 15/100\n",
-      "14000/14000 [==============================] - 6s 462us/step - loss: 1.7662 - acc: 0.6873 - macro_precision: 0.6888 - macro_recall: 0.6877 - macro_f_measure: 0.6883 - val_loss: 0.7895 - val_acc: 0.7139 - val_macro_precision: 0.7284 - val_macro_recall: 0.7120 - val_macro_f_measure: 0.7201\n",
-      "Epoch 16/100\n",
-      "14000/14000 [==============================] - 6s 403us/step - loss: 1.7732 - acc: 0.6902 - macro_precision: 0.6920 - macro_recall: 0.6905 - macro_f_measure: 0.6912 - val_loss: 0.7755 - val_acc: 0.7149 - val_macro_precision: 0.7307 - val_macro_recall: 0.7129 - val_macro_f_measure: 0.7217\n",
-      "Epoch 17/100\n",
-      "14000/14000 [==============================] - 6s 434us/step - loss: 1.6445 - acc: 0.6991 - macro_precision: 0.6988 - macro_recall: 0.6987 - macro_f_measure: 0.6987 - val_loss: 0.7592 - val_acc: 0.7249 - val_macro_precision: 0.7286 - val_macro_recall: 0.7235 - val_macro_f_measure: 0.7260\n",
-      "Epoch 18/100\n",
-      "14000/14000 [==============================] - 6s 398us/step - loss: 1.5163 - acc: 0.7131 - macro_precision: 0.7137 - macro_recall: 0.7134 - macro_f_measure: 0.7135 - val_loss: 0.8276 - val_acc: 0.7299 - val_macro_precision: 0.7298 - val_macro_recall: 0.7293 - val_macro_f_measure: 0.7295\n",
-      "Epoch 19/100\n",
-      "14000/14000 [==============================] - 5s 363us/step - loss: 1.5124 - acc: 0.7146 - macro_precision: 0.7152 - macro_recall: 0.7145 - macro_f_measure: 0.7149 - val_loss: 0.9052 - val_acc: 0.7304 - val_macro_precision: 0.7319 - val_macro_recall: 0.7303 - val_macro_f_measure: 0.7311\n",
-      "Epoch 20/100\n",
-      "14000/14000 [==============================] - 5s 361us/step - loss: 1.4098 - acc: 0.7230 - macro_precision: 0.7237 - macro_recall: 0.7228 - macro_f_measure: 0.7232 - val_loss: 0.9204 - val_acc: 0.7264 - val_macro_precision: 0.7278 - val_macro_recall: 0.7262 - val_macro_f_measure: 0.7270\n",
-      "Epoch 21/100\n",
-      "14000/14000 [==============================] - 5s 368us/step - loss: 1.3768 - acc: 0.7259 - macro_precision: 0.7259 - macro_recall: 0.7259 - macro_f_measure: 0.7259 - val_loss: 0.7992 - val_acc: 0.7354 - val_macro_precision: 0.7355 - val_macro_recall: 0.7347 - val_macro_f_measure: 0.7351\n",
-      "Epoch 22/100\n",
-      "14000/14000 [==============================] - 5s 376us/step - loss: 1.3084 - acc: 0.7336 - macro_precision: 0.7337 - macro_recall: 0.7335 - macro_f_measure: 0.7336 - val_loss: 0.8214 - val_acc: 0.7369 - val_macro_precision: 0.7367 - val_macro_recall: 0.7363 - val_macro_f_measure: 0.7365\n",
-      "Epoch 00022: early stopping\n"
+      "14000/14000 [==============================] - 5s 382us/step - loss: 0.3406 - acc: 0.8627 - macro_precision: 0.8641 - macro_recall: 0.8625 - macro_f_measure: 0.8633 - val_loss: 0.6918 - val_acc: 0.7214 - val_macro_precision: 0.7248 - val_macro_recall: 0.7222 - val_macro_f_measure: 0.7235\n",
+      "Epoch 00007: early stopping\n"
      ]
     }
    ],
@@ -350,8 +314,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4001/4001 [==============================] - 1s 284us/step\n",
-      "[0.7019136754818728, 0.7323169207698076, 0.7314941169648909, 0.7324128573878174, 0.7318986407580063]\n"
+      "4001/4001 [==============================] - 1s 294us/step\n",
+      "[0.651816470833715, 0.7343164208947763, 0.7359563307266359, 0.7326261271866701, 0.7342102438531736]\n"
      ]
     }
    ],
